# safir_monitor_dashboard

./: .gitignore  README.md  README.rst  local.conf  package.json  pipeline.yaml.controller_example  polling.yaml.example  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
monitor_dashboard/: __init__.py
monitor_dashboard.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
monitor_dashboard/api/: aodh.py  ceilometer.py  gnocchi.py  monasca.py
monitor_dashboard/api/rest/: __init__.py  aodh.py  ceilometer.py  gnocchi.py  instance_monitor.py  monasca.py
monitor_dashboard/dashboards/admin/hypervisor_monitor/: panel.py  urls.py  views.py
monitor_dashboard/dashboards/admin/project_monitor/: panel.py  urls.py  views.py
monitor_dashboard/dashboards/project/monitor/: __init__.py  panel.py  urls.py  views.py
monitor_dashboard/enabled/: _1071_project_compute_monitor_panel.py  _2021_admin_hypervisor_monitor_panel.py  _2022_admin_project_monitor_panel.py
monitor_dashboard/static/app/core/openstack-service-api/: monitor.service.js  monitor.service.spec.js
monitor_dashboard/static/css/: _usages.css  nv.d3.css
monitor_dashboard/static/dashboard/admin/hypervisor_monitor/: monitor.module.js  monitor.module.spec.js
monitor_dashboard/static/dashboard/admin/project_monitor/: monitor.module.js  monitor.module.spec.js
monitor_dashboard/static/dashboard/project/monitor/: monitor.module.js  monitor.module.spec.js
monitor_dashboard/static/js/: angular-bootstrap-multiselect.js
(+47 files in other folders)
