[metadata]
name = monitor-dashboard
summary = Horizon System Monitor panel with AngularJS
description-file =
    README.rst
author = B3LAB
author-email = b3lab.iletisim@tubitak.gov.tr
home-page = http://www.b3lab.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monitor_dashboard

